--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -6,6 +6,10 @@ name: 'my_new_project'
 version: '1.0.0'
 config-version: 2
 
+
+vars:
+  category: Seafood
+
 # This setting configures which "profile" dbt uses for this project.
 profile: 'default'
 
@@ -36,7 +40,11 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  my_new_project:
+  pre-hook:
+    - "{{ logging.log_model_start_event() }}"
+  post-hook:
+    - "{{ logging.log_model_end_event() }}"
+  #my_new_project:
     # Applies to all files under models/example/
-    example:
-      +materialized: table
+    #example:
+      #+materialized: table
